# cottas-ui

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
tests/: conftest.py  test_cottas_bridge.py  test_file_manager.py  test_integration_flows.py  test_stats.py  test_validation.py
utils/: cottas_bridge.py  file_manager.py  stats.py  validation.py
views/: compress.py  decompress.py  diff.py  explore.py  home.py  merge.py  search.py  sparql.py
